Rename split screen iframe to split

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Split screen iframe</title>
+    <title>Split</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="setup">
-        <h1>Split screen iframe</h1>
+        <h1>Split</h1>
         <textarea id="urls" placeholder="Enter URLs, comma separated" rows="1"></textarea>
         <div id="scale-control">
             <label for="scale">Scale</label>
